# seizu

./: .env.example  .pre-commit-config.yaml  AGENTS.MD  CHANGELOG.md  Dockerfile.cartography  Makefile  bunfig.toml  docker-compose.yml  genindex.html  objects.inv  package.json  pyproject.toml  search.html  searchindex.js
.config/: setup.sh
.doctrees/: environment.pickle  index.doctree
.doctrees/dev/: dependencies.doctree
.doctrees/install/: backend.doctree  chat-schedules.doctree  cli.doctree  dashboard.doctree  mcp-toolsets.doctree  sandbox.doctree  scheduled-queries.doctree  security.doctree  temporal-workflows.doctree
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  query-validator-live.yml  scorecard.yml  sphinx.yml  test.yaml
_sources/: index.rst.txt
_sources/install/: chat-schedules.md.txt  cli.md.txt  mcp-toolsets.md.txt  scheduled-queries.md.txt  security.md.txt
cartography_sync/: __init__.py  activities.py  contract_check.py  registry.py  shared.py  sync_lock.py  worker.py
contact/: code-of-conduct.html  security.html
dev/: contributing.html  dependencies.html  query-validation.html  test.html
docs/root/: index.rst
install/: backend.html  chat-schedules.html  cli.html  dashboard.html  mcp-skillsets.html  mcp-toolsets.html  query-console.html  quickstart.html  sandbox.html  scheduled-queries.html  security.html  temporal-workflows.html
reporting/: app.py  scheduled_chats.py  scheduled_queries.py  settings.py  temporal_worker.py  worker_bootstrap.py
reporting/authnz/: __init__.py  headless.py  permissions.py
reporting/migrations/: __init__.py  env.py
reporting/routes/: chat.py  chat_schedules.py  config.py  confirmations.py  graph.py  query.py  scheduled_queries.py  sync_metadata.py  toolsets.py  workflows.py
reporting/scheduled_query_modules/: __init__.py  agent_chat.py  log.py  slack.py  sqs.py  statsd.py  temporal.py  workflow.py
reporting/schema/: chat.py  mcp_config.py  query.py  report_config.py  reporting_config.py
reporting/services/: action_confirmations.py  activity_config.py  chat_budget.py  chat_graph.py  chat_messages.py  chat_orchestrator.py  github_checks.py  headless_chat.py  mcp_runtime.py  mcp_server.py  payload_bounds.py  query_validator.py  reporting_neo4j.py  sandbox_agent.py  sandbox_backend.py  sandbox_remediation.py  schedule_spec.py  scheduled_query_validation.py  temporal_runs.py  workflow_schedules.py  workflows.py
reporting/temporal_workflows/: __init__.py  activities.py  cartography_config.py  shared.py  (+4 more)
schema/: openapi.json  reporting-schema.json
scripts/: remediation_smoke.py
seizu_cli/: main.py  schema.py
seizu_schema/: reporting_config.py
src/: config.context.ts  features.context.ts  registerTestDom.ts  routes.tsx  scheduleSpec.ts  setupTests.ts  temporalStatus.ts
(+200 files in other folders)
