[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seizu"
version = "0.1.0"
description = "Configuration-driven reporting platform for Neo4j graph data"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "asyncpg>=0.31.0",
    "authlib>=1.6.0",
    "e2b-code-interpreter>=1.0.0",
    "boto3>=1.42.0",
    "cryptography>=48.0.1",
    "cyver>=2.0.0",
    "datadog>=0.52.0",
    "fastapi>=0.136.0",
    "gunicorn>=25.0.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "langchain-litellm>=0.6.0",
    "litellm>=1.87.0",
    "mcp>=1.27.0",
    "neo4j>=6.0.0",
    "pyjwt[crypto]>=2.13.0",
    "pydantic>=2.13.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.31",
    "pyyaml>=6.0.0",
    "requests>=2.33.0",
    "rich>=15.0.0",
    "secure>=2.0.0",
    "shellingham>=1.5.0",
    "slack-sdk>=3.41.0",
    "snowflake-id>=1.0.2",
    "sqlmodel>=0.0.38",
    "temporalio>=1.9.0",
    "typer>=0.25.0",
    "uvicorn>=0.46.0",
    "langgraph-checkpoint-aws>=1.0.7",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.5",
]

[project.scripts]
seizu = "seizu_cli.main:app"
seizu-server = "reporting.cli:main"
seizu-scheduled-queries = "reporting.scheduled_queries:main"
seizu-scheduled-chats = "reporting.scheduled_chats:main"
seizu-temporal-worker = "reporting.temporal_worker:main"

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "hypothesis>=6.152.6",
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.0",
]

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.14.1",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
]

[tool.uv.workspace]
members = ["packages/seizu-cli"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
# E203: whitespace before ':' (handled by ruff-format; matches prior black/flake8 behavior)
# E701: multiple statements on one line (colon) — intentionally allowed as before
ignore = ["E203", "E701"]

[tool.ruff.lint.isort]
known-first-party = ["cartography_sync", "reporting", "seizu_cli", "seizu_schema"]

[tool.hatch.build.targets.sdist]
include = [
    "cartography_sync",
    "reporting",
    "seizu_cli",
    "seizu_schema",
    "build",
    "gunicorn.conf",
    "logging.conf",
    "README.md",
    "LICENSE",
    "NOTICE",
]

[tool.hatch.build.targets.wheel]
packages = ["cartography_sync", "reporting", "seizu_cli", "seizu_schema"]
force-include = { "build" = "reporting/static_dist", "gunicorn.conf" = "reporting/gunicorn.conf", "logging.conf" = "reporting/logging.conf" }
